--- a/Codeforces/.vscode/settings.json
+++ b/Codeforces/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cph.general.onceMaintainerMessage": false,
     "files.associations": {
-        "ostream": "cpp"
-    }
+        "ostream": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "unordered_map": "cpp",
+        "map": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
