--- a/Codeforces/.vscode/settings.json
+++ b/Codeforces/.vscode/settings.json
@@ -21,7 +21,9 @@
         "string_view": "cpp",
         "unordered_set": "cpp",
         "valarray": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "complex": "cpp",
+        "queue": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
