--- a/Codeforces/.vscode/settings.json
+++ b/Codeforces/.vscode/settings.json
@@ -1,30 +1,31 @@
 {
-    "cph.general.onceMaintainerMessage": false,
-    "files.associations": {
-        "ostream": "cpp",
-        "string": "cpp",
-        "vector": "cpp",
-        "unordered_map": "cpp",
-        "map": "cpp",
-        "__bit_reference": "cpp",
-        "__hash_table": "cpp",
-        "__split_buffer": "cpp",
-        "__tree": "cpp",
-        "array": "cpp",
-        "deque": "cpp",
-        "forward_list": "cpp",
-        "initializer_list": "cpp",
-        "ios": "cpp",
-        "list": "cpp",
-        "regex": "cpp",
-        "set": "cpp",
-        "string_view": "cpp",
-        "unordered_set": "cpp",
-        "valarray": "cpp",
-        "filesystem": "cpp",
-        "complex": "cpp",
-        "queue": "cpp",
-        "iostream": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "disabled"
+  "cph.general.onceMaintainerMessage": false,
+  "files.associations": {
+    "ostream": "cpp",
+    "string": "cpp",
+    "vector": "cpp",
+    "unordered_map": "cpp",
+    "map": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__split_buffer": "cpp",
+    "__tree": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "forward_list": "cpp",
+    "initializer_list": "cpp",
+    "ios": "cpp",
+    "list": "cpp",
+    "regex": "cpp",
+    "set": "cpp",
+    "string_view": "cpp",
+    "unordered_set": "cpp",
+    "valarray": "cpp",
+    "filesystem": "cpp",
+    "complex": "cpp",
+    "queue": "cpp",
+    "iostream": "cpp",
+    "__node_handle": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
